Refactor code, Add class

--- a/styles/style.css
+++ b/styles/style.css
@@ -106,7 +106,7 @@ main {
   width: 100%;
 }
 
-article {
+.card {
   border-radius: 12px;
   background-color: var(--grey-800);
   width: 100%;
@@ -116,69 +116,61 @@ article {
 }
 
 @media screen and (min-width: 90rem) {
-  article {
+  .card {
     max-width: 24rem;
   }
 }
 
-img {
+.card img {
   margin: 0 auto 0;
   width: 88px;
   border-radius: 999px;
   margin-bottom: 1.5rem;
 }
 
-h1 {
+.card h1 {
   color: white;
   font-weight: 600;
   font-size: 1.5rem;
 }
 
-p {
+.card p {
   color: var(--green);
   font-weight: 700;
   font-size: 0.875rem;
   margin-bottom: 1.5rem;
 }
 
-q {
+.card q {
   display: block;
   color: white;
   font-size: 0.875rem;
   margin-bottom: 1.5rem;
 }
 
-ul {
+.card ul {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 
-li {
+.card li {
+  position: relative;
   background-color: var(--grey-700);
   border-radius: 8px;
   color: white;
   padding: 12px;
   cursor: pointer;
   transition: 300ms ease-in-out;
+  transition-property: color, background-color;
 }
 
-li:hover, li:focus-within {
-  position: relative;
+.card li:is(:hover, :focus-within) {
   background-color: var(--green);
   color: var(--grey-700);
 }
 
-a {
+.card a {
   text-decoration: none;
   outline: none;
-}
-
-li:hover a::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
 }
